# graph-fraud-gnn

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Run_in_Colab.ipynb
src/graphfraud/: __init__.py  cli.py  data.py  evaluate.py  layers.py  model.py  train.py
tests/: test_cli.py  test_data.py  test_evaluate.py  test_layers.py  test_model.py  test_train.py
